standard resource/cache paths
fixes #12